#75724 - Inventarieregister - Avtalsstatus /Wrong values for ComputerStatus for Inventory type computer

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Workstations.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Workstations.cshtml
@@ -108,7 +108,7 @@
     </table>
 </div>
 }
-<div id="grid_container">
+<div id="grid_container" class="inventory-overview">
     @Html.Action("WorkstationsGrid", "Workstation", new { filter = Model.Filter })
 </div>
 <script type="text/javascript">
