--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Workstations.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Workstations.cshtml
@@ -25,71 +25,88 @@
 
 <div class="expanded-search-content" style="display: none">    
     <table class="tableform">
-        @if (Model.Settings.DepartmnetFieldSetting.IsShow)
+        @if (Model.Settings.DomainFieldSetting.IsShow)
         {
             <tr>
-                <td class="span3">@Translation.Get(Model.Settings.DepartmnetFieldSetting.Caption)</td>
+                <td class="span3">@Translation.GetCoreTextTranslation(Model.Settings.DomainFieldSetting.Caption)</td>
                 <td>
-                    @Html.DropDownListFor(m => m.Filter.DepartmentId, Model.Departments, string.Empty, new {id = "department_dropdown"})
+                    @Html.DropDownListFor(m => m.Filter.DomainId, Model.Domains, string.Empty)
+                </td>
+            </tr>
+        }
+        @if (Model.Settings.DepartmentFieldSetting.IsShow)
+        {
+            <tr>
+                <td class="span3">@Translation.GetCoreTextTranslation(Model.Settings.DepartmentFieldSetting.Caption)</td>
+                <td>
+                    @Html.DropDownListFor(m => m.Filter.DepartmentId, Model.Departments, string.Empty, new { id = "department_dropdown" })
                 </td>
             </tr>
         }
         @if (Model.Settings.ComputerTypeFieldSetting.IsShow)
         {
             <tr>
-                <td class="span3">@Translation.Get(Model.Settings.ComputerTypeFieldSetting.Caption)</td>
+                <td class="span3">@Translation.GetCoreTextTranslation(Model.Settings.ComputerTypeFieldSetting.Caption)</td>
                 <td>@Html.DropDownListFor(m => m.Filter.ComputerTypeId, Model.ComputerTypes, string.Empty)</td>
             </tr>
         }
         @if (Model.Settings.ContractStatusFieldSetting.IsShow)
         {
             <tr>
-                <td class="span3">@Translation.Get(Model.Settings.ContractStatusFieldSetting.Caption)</td>
+                <td class="span3">@Translation.GetCoreTextTranslation(Model.Settings.ContractStatusFieldSetting.Caption)</td>
                 <td>@Html.DropDownListFor(m => m.Filter.ContractStatusId, Model.ContractStatuses, string.Empty)</td>
             </tr>
         }
         @if (Model.Settings.ContractStartDateFieldSetting.IsShow)
         {
             <tr>
-                <td class="span3">@Translation.Get(Model.Settings.ContractStartDateFieldSetting.Caption)</td>
-                <td>@Html.EditorFor(m => m.Filter.ContractStartDate.DateFrom, "DatePicker", new {id = "contractStartDateFrom_datepicker"})
-                    -
-                    @Html.EditorFor(m => m.Filter.ContractStartDate.DateTo, "DatePicker", new {id = "contractStartDateTo_datepicker"})</td>
-            </tr>
-        }
+                <td class="span3">@Translation.GetCoreTextTranslation(Model.Settings.ContractStartDateFieldSetting.Caption)</td>
+                <td>
+                    @Html.EditorFor(m => m.Filter.ContractStartDate.DateFrom, "DatePicker", new { id = "contractStartDateFrom_datepicker" })
+                -
+                @Html.EditorFor(m => m.Filter.ContractStartDate.DateTo, "DatePicker", new { id = "contractStartDateTo_datepicker" })
+            </td>
+        </tr>
+    }
         @if (Model.Settings.ContractEndDateFieldSetting.IsShow)
         {
             <tr>
-                <td class="span3">@Translation.Get(Model.Settings.ContractEndDateFieldSetting.Caption)</td>
-                <td>@Html.EditorFor(m => m.Filter.ContractEndDate.DateFrom, "DatePicker", new {id = "contractEndDateFrom_datepicker"})
-                    -
-                    @Html.EditorFor(m => m.Filter.ContractEndDate.DateTo, "DatePicker", new {id = "contractEndDateTo_datepicker"})</td>
-            </tr>
-        }
+                <td class="span3">@Translation.GetCoreTextTranslation(Model.Settings.ContractEndDateFieldSetting.Caption)</td>
+                <td>
+                    @Html.EditorFor(m => m.Filter.ContractEndDate.DateFrom, "DatePicker", new { id = "contractEndDateFrom_datepicker" })
+                -
+                @Html.EditorFor(m => m.Filter.ContractEndDate.DateTo, "DatePicker", new { id = "contractEndDateTo_datepicker" })
+            </td>
+        </tr>
+    }
         @if (Model.Settings.ScanDateFieldSetting.IsShow)
         {
             <tr>
-                <td class="span3">@Translation.Get(Model.Settings.ScanDateFieldSetting.Caption)</td>
-                <td>@Html.EditorFor(m => m.Filter.ScanDate.DateFrom, "DatePicker", new {id = "scanDateFrom_datepicker"})
-                    -
-                    @Html.EditorFor(m => m.Filter.ScanDate.DateTo, "DatePicker", new {id = "scanDateTo_datepicker"})</td>
-            </tr>
-        }
+                <td class="span3">@Translation.GetCoreTextTranslation(Model.Settings.ScanDateFieldSetting.Caption)</td>
+                <td>
+                    @Html.EditorFor(m => m.Filter.ScanDate.DateFrom, "DatePicker", new { id = "scanDateFrom_datepicker" })
+                -
+                @Html.EditorFor(m => m.Filter.ScanDate.DateTo, "DatePicker", new { id = "scanDateTo_datepicker" })
+            </td>
+        </tr>
+    }
         @if (Model.Settings.ScrapDateFieldSetting.IsShow)
         {
             <tr>
-                <td class="span3">@Translation.Get(Model.Settings.ScrapDateFieldSetting.Caption)</td>
-                <td>@Html.EditorFor(m => m.Filter.ScrapDate.DateFrom, "DatePicker", new {id = "scrapDateFrom_datepicker"})
-                    -
-                    @Html.EditorFor(m => m.Filter.ScrapDate.DateTo, "DatePicker", new {id = "scrapDateTo_datepicker"})</td>
-            </tr>
-        }
+                <td class="span3">@Translation.GetCoreTextTranslation(Model.Settings.ScrapDateFieldSetting.Caption)</td>
+                <td>
+                    @Html.EditorFor(m => m.Filter.ScrapDate.DateFrom, "DatePicker", new { id = "scrapDateFrom_datepicker" })
+                -
+                @Html.EditorFor(m => m.Filter.ScrapDate.DateTo, "DatePicker", new { id = "scrapDateTo_datepicker" })
+            </td>
+        </tr>
+    }
         <tr>
             <td class="span3">
                 @Html.LabelFor(m => m.Filter.IsShowScrapped)
             </td>
             <td>
-                @Html.CheckBoxFor(m => m.Filter.IsShowScrapped, new {@class = "switchcheckbox"})
+                @Html.CheckBoxFor(m => m.Filter.IsShowScrapped, new { @class = "switchcheckbox" })
             </td>
         </tr>
     </table>
@@ -101,7 +118,7 @@
                 @Html.LabelFor(m => m.Filter.SearchFor)
             </td>
             <td>
-                @Html.TextBoxFor(m => m.Filter.SearchFor) <input type="submit" value="@Translation.Get("Sök")" class="btn" />&nbsp;<i class='icon-plus-sign search-expand-button' style="cursor: pointer"></i>
+                @Html.TextBoxFor(m => m.Filter.SearchFor) <input type="submit" value="@Translation.GetCoreTextTranslation("Sök")" class="btn" />&nbsp;<i class='icon-plus-sign search-expand-button' style="cursor: pointer"></i>
               
             </td>
         </tr>
