--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Workstations.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/Workstations.cshtml
@@ -1,23 +1,6 @@
 ﻿@using DH.Helpdesk.Web.Areas.Inventory.Models.SearchModels
 @using DH.Helpdesk.Web.Infrastructure
 @model WorkstationSearchViewModel
-<script>
-    $(function () {
-        $('#region_dropdown').change(function () {
-
-            var selectedValue = $(this).val();
-            $.get('@Url.Action("SearchDepartmentsByRegionId")', { selected: selectedValue }, function (json) {
-                var sel = $('#department_dropdown');
-                sel.empty();
-                sel.prepend("<option></option>");
-                for (var i = 0; i < json.length; i++) {
-                    var e = json[i];
-                    $('<option>').text(e.Name).val(e.Value).appendTo(sel);
-                }
-            });
-        });
-    });
-</script>
 @using (Ajax.BeginForm("WorkstationsGrid", null, new AjaxOptions { UpdateTargetId = "grid_container" }, new { id = "search_form" }))
 {
     @Html.HiddenFor(m => m.Filter.SortField.Name, new { id = "sortFieldName" })
@@ -34,12 +17,30 @@
                 </td>
             </tr>
         }
+        @if (Model.Settings.RegionFieldSetting.IsShow)
+        {
+            <tr>
+                <td class="span3">@Translation.GetCoreTextTranslation(Model.Settings.RegionFieldSetting.Caption)</td>
+                <td>
+                    @Html.DropDownListFor(m => m.Filter.RegionId, Model.Regions, string.Empty, new { id = "region_dropdown" })
+                </td>
+            </tr>
+        }
         @if (Model.Settings.DepartmentFieldSetting.IsShow)
         {
             <tr>
                 <td class="span3">@Translation.GetCoreTextTranslation(Model.Settings.DepartmentFieldSetting.Caption)</td>
                 <td>
                     @Html.DropDownListFor(m => m.Filter.DepartmentId, Model.Departments, string.Empty, new { id = "department_dropdown" })
+                </td>
+            </tr>
+        }
+        @if (Model.Settings.UnitFieldSetting.IsShow)
+        {
+            <tr id="unit_row" style = '@(Model.Units.Any() ? "" : "display:none" )' >
+                <td class="span3">@Translation.GetCoreTextTranslation(Model.Settings.UnitFieldSetting.Caption)</td>
+                <td>
+                    @Html.DropDownListFor(m => m.Filter.UnitId, Model.Units, string.Empty, new { id = "unit_dropdown" })
                 </td>
             </tr>
         }
@@ -131,17 +132,86 @@
 <script type="text/javascript">
 
     $(".expanded-search-content").hide();
-   
-    $(function () {
-        $(".search-expand-button").click(function () {
+
+    $(function() {
+
+        var ouRegionCtrl = $('#region_dropdown');
+        var departmentCtrl = $('#department_dropdown');
+        var unitCtrl = $('#unit_dropdown');
+        var unitRow = $('#unit_row');
+
+        ouRegionCtrl.on('change', function () {
+            var regionId = $(this).val();
+            $.get('@Url.Action("GetDepartments", "Ajax", new {area = ""})',
+                {
+                    'regionId': regionId,
+                    'administratorId': @SessionFacade.CurrentUser.Id,
+                    'departmentFilterFormat': 0
+                },
+                function (data) {
+
+                    var options = '<option value="">&nbsp;</option>';
+                    if (data) {
+                        for (var i = 0; i < data.length; i++) {
+                            var item = data[i];
+
+                            options += "<option value='" + item.Value + "'>" + item.Name + "</option>";
+                        }
+                    }
+
+                    departmentCtrl.empty();
+                    departmentCtrl.append(options);
+                    departmentCtrl.trigger('change');
+
+                }, 'json').always(function () {
+
+            });
+        });
+        departmentCtrl.on('change',
+            function() {
+                var departmentId = $(this).val();
+                if (departmentId > 0) {
+                    $.get('@Url.Action("GetUnits", "Ajax", new {area = ""})',
+                        {
+                            'departmentId': departmentId,
+                            'customerId': @SessionFacade.CurrentCustomer.Id
+                        },
+                        function (data) {
+
+                            var options = '<option value="">&nbsp;</option>';
+                            if (data && data.length) {
+                                for (var i = 0; i < data.length; i++) {
+                                    var item = data[i];
+
+                                    options += "<option value='" + item.id + "'>" + item.name + "</option>";
+                                }
+                                unitCtrl.empty();
+                                unitCtrl.append(options);
+                                unitRow.show();
+                            } else {
+                                unitRow.hide();
+                                unitCtrl.val('');
+                                unitCtrl.empty();
+                            }
+                        },
+                        'json').always(function() {
+
+                    });
+                } else {
+                    unitRow.hide();
+                    unitCtrl.val('');
+                    unitCtrl.empty();
+                }
+            });
+
+        $(".search-expand-button").click(function() {
             //event.stopPropagation();
             var $target = $(event.target);
             $(".expanded-search-content").toggle();
 
             if ($target.closest("i").hasClass('icon-minus-sign')) {
                 $target.closest("i").removeClass('icon-minus-sign').addClass('icon-plus-sign');
-            }
-            else {
+            } else {
                 $target.closest("i").removeClass('icon-plus-sign').addClass('icon-minus-sign');
             }
         });
