--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_LogNoteFiles.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_LogNoteFiles.cshtml
@@ -54,7 +54,7 @@
                     {
                         <a target="_blank" class="isExisted"
                            onclick="window.dhHelpdesk.logFileAccess(@currentLog.CaseId, '@l.FileName', @(l.LogType == LogFileType.Internal ? (int)CaseFileType.LogInternal : (int)CaseFileType.LogExternal), @l.LogId.Value)"
-                           href="@BuildLogFileLinkVD(l.LogId.Value, l.FileName, l.LogType)"><i class="icon- attachedFile"></i> @l.FileName</a>
+                           href="@BuildLogFileLinkVD(l.LogId.Value, l.FileName, l.ParentLogType ?? l.LogType)"><i class="icon- attachedFile"></i> @l.FileName</a>
                     }
                     else
                     {
